--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <title>Portfolio</title>
     </head>
 
-    <body stly>
+    <body>
         <div id="app"></div>
         <noscript>
             You need to enable JavaScript to run this React application.
